--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,7 +1,10 @@
 @import "tailwindcss";
+@plugin "daisyui"{
+   themes: light --default;
+ }
 :root{
     --primary: purple;
-    --secondary: #fff2e672;
+    --secondary: #fff2e6cb;
 }
 html, body{
     margin: 0;
@@ -11,6 +14,7 @@ html, body{
     width: 100%;
     font-family: 'Poppins', sans-serif;
     background-color: var(--secondary);
+    scroll-behavior: smooth;
 }
 ::-webkit-scrollbar{
     width: 0;
